[gd_scene load_steps=24 format=2]

[ext_resource path="res://scenes/collision_test.gd" type="Script" id=1]
[ext_resource path="res://rain.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Area.gd" type="Script" id=3]
[ext_resource path="res://scenes/rain.gd" type="Script" id=4]
[ext_resource path="res://images/title.jpg" type="Texture" id=5]
[ext_resource path="res://scenes/miku.gd" type="Script" id=6]
[ext_resource path="res://scenes/miku.tscn" type="PackedScene" id=7]
[ext_resource path="res://images/hand.png" type="Texture" id=8]
[ext_resource path="res://fonts/font.tres" type="DynamicFont" id=9]
[ext_resource path="res://scenes/toTitle.gd" type="Script" id=10]
[ext_resource path="res://icon.png" type="Texture" id=11]
[ext_resource path="res://scenes/layout/respawn.gd" type="Script" id=12]
[ext_resource path="res://scenes/layout/back.gd" type="Script" id=13]
[ext_resource path="res://scenes/layout/backWithSound.gd" type="Script" id=14]
[ext_resource path="res://scenes/tree.tscn" type="PackedScene" id=15]
[ext_resource path="res://scenes/sounds/sound.tscn" type="PackedScene" id=16]
[ext_resource path="res://scenes/dream_diary.tscn" type="PackedScene" id=17]
[ext_resource path="res://scenes/Timer.gd" type="Script" id=18]
[ext_resource path="res://AI.tscn" type="PackedScene" id=19]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.96108, 1.66772, 0.284864 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 52.043, 1.24441, 70.5791 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.36522, 1.15256, 0.215447 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 1, 31.4742, 89.185 )

[node name="root" type="Spatial"]
script = ExtResource( 1 )

[node name="RigidRain" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.54218, 6.70983, -14.8252 )

[node name="rain" parent="RigidRain" instance=ExtResource( 2 )]
transform = Transform( 0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="RigidRain"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.781559, 0 )
visible = false
shape = SubResource( 1 )

[node name="Area" type="Area" parent="RigidRain"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.54218, -6.70983, 14.8252 )
script = ExtResource( 3 )

[node name="CollisionShape2" type="CollisionShape" parent="RigidRain/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.54218, 8.26672, -14.8252 )
shape = SubResource( 1 )

[node name="RigidRainC2" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6.35433, 6.70983, -10.4996 )

[node name="rain" parent="RigidRainC2" instance=ExtResource( 2 )]
transform = Transform( 0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="RigidRainC2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.781559, 0 )
visible = false
shape = SubResource( 1 )

[node name="Area" type="Area" parent="RigidRainC2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.54218, -6.70983, 14.8252 )
script = ExtResource( 3 )

[node name="CollisionShape2" type="CollisionShape" parent="RigidRainC2/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.54218, 8.26672, -14.8252 )
shape = SubResource( 1 )

[node name="RigidRainC3" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10.3309, 6.70983, -5.49667 )

[node name="rain" parent="RigidRainC3" instance=ExtResource( 2 )]
transform = Transform( 0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="RigidRainC3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.781559, 0 )
visible = false
shape = SubResource( 1 )

[node name="Area" type="Area" parent="RigidRainC3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.54218, -6.70983, 14.8252 )
script = ExtResource( 3 )

[node name="CollisionShape2" type="CollisionShape" parent="RigidRainC3/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.54218, 8.26672, -14.8252 )
shape = SubResource( 1 )

[node name="rain" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 24.9992 )
mode = 3
script = ExtResource( 4 )

[node name="rain" parent="rain" instance=ExtResource( 2 )]

[node name="CollisionShape" type="CollisionShape" parent="rain"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.45979, 0 )
visible = false
shape = SubResource( 1 )

[node name="Area" type="Area" parent="rain"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.54218, -6.70983, 14.8252 )
script = ExtResource( 3 )

[node name="CollisionShape2" type="CollisionShape" parent="rain/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.54218, 8.26672, -14.8252 )
shape = SubResource( 1 )

[node name="ground" type="StaticBody" parent="."]

[node name="Sprite3D" type="Sprite3D" parent="ground"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
visible = false
pixel_size = 0.09
texture = ExtResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.37991, -5.19882 )
shape = SubResource( 2 )

[node name="miku" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.85097, 0.0341005, -1.02482 )
mode = 3
script = ExtResource( 6 )

[node name="miku" parent="miku" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.27715, 0 )

[node name="fps" type="Camera" parent="miku/miku"]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 3.46927, 0.910758 )

[node name="hand" type="Sprite3D" parent="miku/miku"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 2.5212, 2.93726 )
texture = ExtResource( 8 )

[node name="third_cam" type="Camera" parent="miku/miku"]
transform = Transform( -1, 7.10542e-15, -8.74228e-08, -4.79415e-08, 0.836225, 0.548387, 7.31051e-08, 0.548387, -0.836225, 0, 7.36461, -5.53971 )

[node name="CollisionShape" type="CollisionShape" parent="miku"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 9.42178, 0 )
shape = SubResource( 3 )

[node name="Control" type="Control" parent="."]
margin_left = -13.6037
margin_top = -10.883
margin_right = 1010.4
margin_bottom = 589.117

[node name="score" type="Label" parent="Control"]
margin_left = 814.35
margin_top = 46.1
margin_right = 934.35
margin_bottom = 87.1
custom_fonts/font = ExtResource( 9 )
text = "分数：0"

[node name="height" type="Label" parent="Control"]
margin_left = 811.335
margin_top = 97.1664
margin_right = 931.335
margin_bottom = 138.166
custom_fonts/font = ExtResource( 9 )
text = "身高：1.5m"

[node name="weight" type="Label" parent="Control"]
margin_left = 809.002
margin_top = 154.317
margin_right = 929.002
margin_bottom = 195.317
custom_fonts/font = ExtResource( 9 )
text = "质量:45kg"

[node name="toTitle" type="Button" parent="Control"]
visible = false
margin_left = 352.8
margin_top = 208.16
margin_right = 722.8
margin_bottom = 318.16
custom_fonts/font = ExtResource( 9 )
text = "回到标题"
script = ExtResource( 10 )

[node name="Sprite" type="Sprite" parent="Control"]
position = Vector2( 857.998, 245.477 )
texture = ExtResource( 11 )

[node name="lost" type="Label" parent="Control"]
visible = false
margin_left = 363.947
margin_top = 190.324
margin_right = 523.947
margin_bottom = 231.324
custom_fonts/font = ExtResource( 9 )
text = "你失败了"

[node name="respawn" type="Button" parent="Control/lost"]
margin_left = -1.26544
margin_top = 53.7947
margin_right = 106.735
margin_bottom = 100.795
custom_fonts/font = ExtResource( 9 )
text = "重生"
script = ExtResource( 12 )

[node name="back" type="Button" parent="Control/lost"]
margin_left = 131.488
margin_top = 50.7006
margin_right = 412.488
margin_bottom = 99.7006
custom_fonts/font = ExtResource( 9 )
text = "回到主菜单"
script = ExtResource( 13 )

[node name="display_time" type="Label" parent="Control"]
margin_left = 460.254
margin_top = 55.4997
margin_right = 560.254
margin_bottom = 96.4997
custom_fonts/font = ExtResource( 9 )
text = "10:00"

[node name="resultPanel" type="Panel" parent="Control"]
visible = false
margin_left = 174.36
margin_top = 99.6396
margin_right = 798.36
margin_bottom = 542.64

[node name="result" type="Label" parent="Control/resultPanel"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 9 )
text = "时间到，你的名次：
1.xxx xxx分
2.xxx xxx分"

[node name="back" type="Button" parent="Control/resultPanel"]
margin_left = 232.477
margin_top = 359.279
margin_right = 444.477
margin_bottom = 429.279
custom_fonts/font = ExtResource( 9 )
text = "返回主菜单"
script = ExtResource( 14 )

[node name="treeSceneRoot" parent="." instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.8271, 0, -4.46408 )

[node name="up_third" type="Camera" parent="."]
transform = Transform( 0.437627, -0.86527, 0.244523, 0, 0.271947, 0.962312, -0.899157, -0.421134, 0.119011, 9.8749, 41.9564, 3.45809 )
current = true

[node name="sound" parent="." instance=ExtResource( 16 )]

[node name="dreamRoom" parent="." instance=ExtResource( 17 )]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 9.00388, 0, 25.1093 )

[node name="Timer" type="Timer" parent="."]
wait_time = 600.0
autostart = true
script = ExtResource( 18 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="边界" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 60.8126, 8.23162, 0 )

[node name="CollisionShape" type="CollisionShape" parent="边界"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.54646, 0, 0 )
shape = SubResource( 4 )

[node name="CollisionShape2" type="CollisionShape" parent="边界"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -123.174, 0, 0 )
shape = SubResource( 4 )

[node name="CollisionShape3" type="CollisionShape" parent="边界"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -63.4428, 0, 50.789 )
shape = SubResource( 4 )

[node name="CollisionShape4" type="CollisionShape" parent="边界"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -63.4428, 0, -51.859 )
shape = SubResource( 4 )

[node name="AI" parent="." instance=ExtResource( 19 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 10.9543 )

[connection signal="area_shape_entered" from="RigidRain/Area" to="RigidRain/Area" method="_on_Area_area_shape_entered"]
[connection signal="area_shape_entered" from="RigidRainC2/Area" to="RigidRainC2/Area" method="_on_Area_area_shape_entered"]
[connection signal="area_shape_entered" from="RigidRainC3/Area" to="RigidRainC3/Area" method="_on_Area_area_shape_entered"]
[connection signal="area_shape_entered" from="rain/Area" to="rain/Area" method="_on_Area_area_shape_entered"]
[connection signal="body_shape_entered" from="rain/Area" to="rain/Area" method="_on_Area_body_shape_entered"]
[connection signal="button_down" from="Control/toTitle" to="Control/toTitle" method="_on_toTitle_button_down"]
[connection signal="button_down" from="Control/lost/respawn" to="Control/lost/respawn" method="_on_respawn_button_down"]
[connection signal="button_down" from="Control/lost/back" to="Control/lost/back" method="_on_back_button_down"]
[connection signal="pressed" from="Control/resultPanel/back" to="Control/resultPanel/back" method="_on_back_pressed"]
[connection signal="timeout" from="Timer" to="Timer" method="_on_Timer_timeout"]
